--- a/albionboxes/prod_full_bath_shower_speakerz_plug_v1.yaml
+++ b/albionboxes/prod_full_bath_shower_speakerz_plug_v1.yaml
@@ -92,25 +92,47 @@ binary_sensor:
       inverted: true
     name: "${friendly_name} Blue Button"
     # https://esphome.io/components/binary_sensor/index.html#on-multi-click
-    on_press:
-      then:
-        - logger.log: "Blue Button Clicked started"
-        - switch.turn_on: plug_relay_switch
-        - script.execute:
-            id: rufus_activity_request
-            rufus_url: "${rufus_url}"
-            activity: "full-bath-music-lights"
-        # https://esphome.io/components/api.html#homeassistant-service-action
-        # https://community.home-assistant.io/t/service-calls-through-native-api/374038/2
-        - homeassistant.service:
-            service: mass.play_media
-            data_template:
-              entity_id: "${target_device_entity_id}"
-              media_id: "{{ my_media_id }}"
-              media_type: "{{ my_media_type }}"
-            variables:
-              my_media_id: |-
-                return id(media_id_text_sensor).state;
-              my_media_type: |-
-                return id(media_type_text_sensor).state;
-        - logger.log: "Blue Button Clicked done"
+    on_multi_click:
+      - timing:
+          - ON for at most 1s
+          - OFF for at most 1s
+          - ON for at most 1s
+          - OFF for at least 0.2s
+        then:
+          - logger.log: "Blue => Double Clicked"
+          - logger.log: "Blue Button Double Clicked started"
+          - switch.turn_on: plug_relay_switch
+          - script.execute:
+              id: rufus_activity_request
+              rufus_url: "${rufus_url}"
+              activity: "full-bath-music-lights"
+          # https://esphome.io/components/api.html#homeassistant-service-action
+          # https://community.home-assistant.io/t/service-calls-through-native-api/374038/2
+          - homeassistant.service:
+              service: mass.play_media
+              data_template:
+                entity_id: "${target_device_entity_id}"
+                media_id: "{{ my_media_id }}"
+                media_type: "{{ my_media_type }}"
+              variables:
+                my_media_id: |-
+                  return id(media_id_text_sensor).state;
+                my_media_type: |-
+                  return id(media_type_text_sensor).state;
+      - timing:
+          - ON for 1s to 2s
+          - OFF for at least 0.5s
+        then:
+          - logger.log: "Blue => Single Long Clicked"
+      - timing:
+          - ON for at most 1s
+          - OFF for at least 0.5s
+        then:
+          - logger.log: "Blue => Single Short Clicked"
+          - logger.log: "Blue Button Clicked started"
+          - switch.turn_on: plug_relay_switch
+          - script.execute:
+              id: rufus_activity_request
+              rufus_url: "${rufus_url}"
+              activity: "full-bath-music-lights"
+          - logger.log: "Blue Button Clicked done"
