Updating the plug in the other room too

--- a/albionboxes/prod_albion_jukebox_plug.yaml
+++ b/albionboxes/prod_albion_jukebox_plug.yaml
@@ -19,6 +19,7 @@ substitutions:
   primary_media_type: "album"
   secret_media_id: "spotify://playlist/3vu293xS1ylb47xzKYLHTE"
   secret_media_type: "album"
+  default_autoplay_volume_level: "0.75"
 
 packages:
   esphome: !include common/default_esphome.yaml
@@ -128,6 +129,11 @@ binary_sensor:
                   return id(media_id_text_sensor).state;
                 my_media_type: |-
                   return id(media_type_text_sensor).state;
+          - homeassistant.service:
+              service: media_player.volume_set
+              data:
+                entity_id: "${target_device_entity_id}"
+                volume_level: "${default_autoplay_volume_level}"
           - logger.log: "Blue Button Double Clicked done"
       - timing:
           - ON for 1s to 2s
@@ -149,6 +155,11 @@ binary_sensor:
                   return id(secret_media_id_text_sensor).state;
                 my_media_type: |-
                   return id(secret_media_type_text_sensor).state;
+          - homeassistant.service:
+              service: media_player.volume_set
+              data:
+                entity_id: "${target_device_entity_id}"
+                volume_level: "${default_autoplay_volume_level}"
           - script.execute:
               id: rufus_activity_request
               rufus_url: "${rufus_url}"
