Cleaned up closet lights for a first pass

--- a/albionboxes/prod_jz_closet_light_strip.yaml
+++ b/albionboxes/prod_jz_closet_light_strip.yaml
@@ -4,16 +4,16 @@ substitutions:
   area: JZ Bedroom
   comment: "This powers a light strip in the JZ Bedroom Closet"
   box_config_file_name: prod_jz_closet_light_strip
-  choc_light_strip_name: "Chocolate"
-  choc_light_strip_id: "chocolate_light_strip"
-  choc_light_strip_data_pin: "19"
-  choc_light_strip_rmt_channel: "0"
-  choc_light_strip_icon: "mdi:led-strip-variant"
-  snack_light_strip_name: "Snack"
-  snack_light_strip_id: "snack_light_strip"
-  snack_light_strip_data_pin: "22"
-  snack_light_strip_rmt_channel: "1"
-  snack_light_strip_icon: "mdi:led-strip"
+  under_shelf_light_strip_name: "Under Shelf"
+  under_shelf_light_strip_id: "under_shelf_light_strip"
+  under_shelf_light_strip_data_pin: "26"
+  under_shelf_light_strip_rmt_channel: "0"
+  under_shelf_light_strip_icon: "mdi:led-strip-variant"
+  ceiling_light_strip_name: "Ceiling"
+  ceiling_light_strip_id: "ceiling_light_strip"
+  ceiling_light_strip_data_pin: "32"
+  ceiling_light_strip_rmt_channel: "1"
+  ceiling_light_strip_icon: "mdi:led-strip"
   # 26 for 2 long sides and 19 for the short side
   light_strip_num_leds: "71"
   cabinet_light_sensor_update_interval: "1s"
@@ -42,14 +42,14 @@ packages:
   internal_temp: !include common/internal_temp.yaml
   dashboard_import: !include common/default_dashboard_import.yaml
   albion_boxes_info: !include common/albionboxes_info.yaml
-  i2c_bus: !include common/default_i2c.yaml
+#  i2c_bus: !include common/default_i2c.yaml
 
-sensor:
-  - <<: !include { file: common/ambient_light_sensor.yaml, vars: { light_sensor_update_interval: "${cabinet_light_sensor_update_interval}" } }
+#sensor:
+#  - <<: !include { file: common/ambient_light_sensor.yaml, vars: { light_sensor_update_interval: "${cabinet_light_sensor_update_interval}" } }
 
 light:
-  - <<: !include { file: common/light_strip.yaml, vars: { led_strip_name: "${choc_light_strip_name}", led_strip_id: "${choc_light_strip_id}", light_data_pin: "${choc_light_strip_data_pin}", rmt_channel: "${choc_light_strip_rmt_channel}", led_strip_icon: "${choc_light_strip_icon}",num_leds: "${light_strip_num_leds}" } }
-  - <<: !include { file: common/light_strip.yaml, vars: { led_strip_name: "${snack_light_strip_name}", led_strip_id: "${snack_light_strip_id}", light_data_pin: "${snack_light_strip_data_pin}", rmt_channel: "${snack_light_strip_rmt_channel}", led_strip_icon: "${snack_light_strip_icon}",num_leds: "${light_strip_num_leds}" } }
+  - <<: !include { file: common/light_strip.yaml, vars: { led_strip_name: "${under_shelf_light_strip_name}", led_strip_id: "${under_shelf_light_strip_id}", light_data_pin: "${under_shelf_light_strip_data_pin}", rmt_channel: "${under_shelf_light_strip_rmt_channel}", led_strip_icon: "${under_shelf_light_strip_icon}",num_leds: "${light_strip_num_leds}" } }
+  - <<: !include { file: common/light_strip.yaml, vars: { led_strip_name: "${ceiling_light_strip_name}", led_strip_id: "${ceiling_light_strip_id}", light_data_pin: "${ceiling_light_strip_data_pin}", rmt_channel: "${ceiling_light_strip_rmt_channel}", led_strip_icon: "${ceiling_light_strip_icon}",num_leds: "${light_strip_num_leds}" } }
 
 # https://esphome.io/components/button/index.html
 button:
@@ -83,22 +83,22 @@ script:
   - id: turn_off_lights
     then:
       - light.turn_off:
-          id: "${choc_light_strip_id}"
+          id: "${under_shelf_light_strip_id}"
       - light.turn_off:
-          id: "${snack_light_strip_id}"
+          id: "${ceiling_light_strip_id}"
       - logger.log: 'Done with turn off lights'
 
   # I don't actually like this look, it's kind of purple for some reason
   - id: turn_on_actual_white_lights
     then:
       - light.turn_on:
-          id: "${choc_light_strip_id}"
+          id: "${under_shelf_light_strip_id}"
           transition_length: 500ms
           brightness: 1.0 # 1.0 is full brightness
           color_mode: WHITE
           white: 1.0
       - light.turn_on:
-          id: "${snack_light_strip_id}"
+          id: "${ceiling_light_strip_id}"
           transition_length: 500ms
           brightness: 1.0 # 1.0 is full brightness
           color_mode: WHITE
@@ -109,7 +109,7 @@ script:
   - id: turn_on_good_white_lights
     then:
       - light.turn_on:
-          id: "${choc_light_strip_id}"
+          id: "${under_shelf_light_strip_id}"
           brightness: 1.0 # 1.0 is full brightness
           color_mode: RGB_WHITE
           # the following is actually white
@@ -119,7 +119,7 @@ script:
           white: 1.0
           effect: None
       - light.turn_on:
-          id: "${snack_light_strip_id}"
+          id: "${ceiling_light_strip_id}"
           brightness: 1.0 # 1.0 is full brightness
           color_mode: RGB_WHITE
           # the following is actually white
@@ -133,7 +133,7 @@ script:
   - id: turn_on_color_lights
     then:
       - light.turn_on:
-          id: "${choc_light_strip_id}"
+          id: "${under_shelf_light_strip_id}"
           brightness: 1.0 # 1.0 is full brightness
           color_mode: RGB_WHITE
           # the following is purple
@@ -143,7 +143,7 @@ script:
           white: 0
           effect: "${default_turn_on_color_effect}"
       - light.turn_on:
-          id: "${snack_light_strip_id}"
+          id: "${ceiling_light_strip_id}"
           brightness: 1.0 # 1.0 is full brightness
           color_mode: RGB_WHITE
           # the following is purple
@@ -164,26 +164,26 @@ binary_sensor:
     on_release:
       then:
         - logger.log: "${friendly_name} Button tapped"
-        - light.toggle: "${snack_light_strip_id}"
-        - light.toggle: "${choc_light_strip_id}"
+        - light.toggle: "${ceiling_light_strip_id}"
+        - light.toggle: "${under_shelf_light_strip_id}"
         - logger.log: "Done with ${friendly_name} button tapped!"
   # extended buttons
-  - platform: gpio
-    pin:
-      number: "${red_button_pin}"
-      inverted: true
-    name: "${friendly_name} ${red_button_name} Red Button"
-    on_press:
-      then:
-        - logger.log: "Red Button Clicked"
-        - light.toggle: "${snack_light_strip_id}"
-
-  - platform: gpio
-    pin:
-      number: "${blue_button_pin}"
-      inverted: true
-    name: "${friendly_name} ${blue_button_name} Blue Button"
-    on_press:
-      then:
-        - logger.log: "Blue Button Clicked"
-        - light.toggle: "${choc_light_strip_id}"
+#  - platform: gpio
+#    pin:
+#      number: "${red_button_pin}"
+#      inverted: true
+#    name: "${friendly_name} ${red_button_name} Red Button"
+#    on_press:
+#      then:
+#        - logger.log: "Red Button Clicked"
+#        - light.toggle: "${ceiling_light_strip_id}"
+#
+#  - platform: gpio
+#    pin:
+#      number: "${blue_button_pin}"
+#      inverted: true
+#    name: "${friendly_name} ${blue_button_name} Blue Button"
+#    on_press:
+#      then:
+#        - logger.log: "Blue Button Clicked"
+#        - light.toggle: "${under_shelf_light_strip_id}"
