That's a bunch of changes. Enough for now

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -41,5 +41,6 @@ updates:
     allow:
       # allow updates for specific clients
       - dependency-name: "esphome"
+      # Note: esphome pins specific Pillow versions
       - dependency-name: "Pillow"
       - dependency-name: "CairoSVG"
