--- a/albionboxes/common/air_q_sensor/utils/default_air_q_esphome.yaml
+++ b/albionboxes/common/air_q_sensor/utils/default_air_q_esphome.yaml
@@ -6,9 +6,15 @@ esphome:
   comment: ${comment}
   project: !include ../../default_project.yaml
   platformio_options:
-    board_build.f_flash: 80000000L
-    #board_upload.flash_size: 16MB
-    board_build.flash_mode: qio
-    board_build.psram_type: opi
-    board_build.partitions: default_16MB.csv
-    board_build.arduino.memory_type: qio_opi
+    board_build.mcu: esp32s3
+    board_build.name: "M5Stack StampS3"
+    board_build.upload.flash_size: 8MB
+    board_build.upload.maximum_size: 8388608
+    board_build.vendor: M5Stack
+  on_boot:
+    - priority: 800
+      then:
+        - output.turn_on: enable
+    - priority: 800
+      then:
+        - pcf8563.read_time
