And there we go. This is cool now

--- a/albionboxes/common/dial/rotary_encoder/dial_filtered_volume_rotary_encoder.yaml
+++ b/albionboxes/common/dial/rotary_encoder/dial_filtered_volume_rotary_encoder.yaml
@@ -2,6 +2,7 @@
 - platform: rotary_encoder
   name: "${friendly_name} Rotary Encoder"
   id: rotaryencoder
+  internal: true
   max_value: 100
   min_value: 0
   resolution: 1
