--- a/albionboxes/common/dial/rotary_encoder/dial_scripted_volume_rotary_encoder_v2.yaml
+++ b/albionboxes/common/dial/rotary_encoder/dial_scripted_volume_rotary_encoder_v2.yaml
@@ -2,6 +2,7 @@
 - platform: rotary_encoder
   name: "${friendly_name} Rotary Encoder"
   id: rotaryencoder
+  internal: true
   max_value: 100
   min_value: 0
   resolution: 1
