--- a/albionboxes/common/env_iv_bmp280_sensor.yaml
+++ b/albionboxes/common/env_iv_bmp280_sensor.yaml
@@ -1,6 +1,6 @@
 # https://shop.m5stack.com/products/env-iv-unit-with-temperature-humidity-air-pressure-sensor-sht40-bmp280
 # https://esphome.io/components/sensor/bmp280.html
-- platform: bmp280
+- platform: bmp280_i2c
   i2c_id: ${env_iv_i2c_id}
   temperature:
     name: "${env_iv_sensor_name} Outside Temperature"
